# Apex-SAPIENT-Middleware

./: apex_config.json  changelog.txt  install_elastic.bat  license.txt  pyproject.toml  readme.md  run_protoc.py  start_elastic.bat
apex-v4.2.0/: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  apex.code-workspace  license.txt  make_apex_delivery.bat  readme.md  replay_config.json  requirements.txt
apex-v4.2.0/deploy/: run_all.bat
apex-v4.2.0/sapient_apex_qt_helpers/: model_merger.py  syntax_highligher_json.py
apex-v4.2.0/sapient_apex_server/: sqlite_schema.py  sqlite_thread.py  time_util.py
apex-v4.2.0/sapient_msg/: proto_options.proto  proto_options_pb2.py  proto_options_pb2.pyi
apex-v4.2.0/tests/: docker-compose.test.yml  msg_templates.py  test_manager.py  test_msg_parsing.py  test_routing.py  test_sql.py  testing_proto.proto  testing_proto_pb2.py  testing_proto_pb2.pyi
deploy/: acknowledgements.txt  build_nuitka.bat
sapient_apex_api/: controller.py  manager.py  response_models.py  response_protos.py  server.py
sapient_apex_api/interface/: __init__.py
sapient_apex_gui/: apex_gui.py  main_window.py
sapient_apex_gui/connections/: connections_tab.py  tree_builder.py
sapient_apex_gui/core/: database_thread.py
sapient_apex_gui/message_types/: message_types_query.py  message_types_tab.py
sapient_apex_gui/messages/: messages_tab.py
sapient_apex_qt_helpers/: syntax_highlighter_xml.py  view_builder.py
sapient_apex_replay/: replay.py
sapient_apex_server/: apex.py  apex_server.py  connection.py  message_io.py  parse_proto.py  parse_xml.py  sqlite_saver.py  structures.py  trio_util.py  validate_proto.py
sapient_msg/: readme.md
tests/: .env  README.md  conftest.py  docker-compose.yml  test_conversions.py  test_elastic_interface.py  test_endpoints.py  test_message_io.py  test_regressions.py  test_replay_script.py  test_sapient_testing.py  test_validator.py
(+129 files in other folders)
